so mais 13213213 erros sobrando no sonar