@@ -3,7 +3,6 @@ package unirio.pm.external_service.exception;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -23,7 +22,7 @@ public class GlobalExceptionHandler {
                 .getAllErrors()
                 .stream()
                 .map(error -> (error).getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity
                 .status(HttpStatus.UNPROCESSABLE_ENTITY)
